--- a/index.html
+++ b/index.html
@@ -5,101 +5,74 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>starmz123</title>
-
-	<style>
-		html {
-			color: darkslateblue;
-			background-color: peachpuff
-		}
-
-		h1,
-		h2 {
-			text-align: center;
-		}
-
-		h3 {
-			margin-bottom: -10px;
-		}
-	</style>
+	<link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
 	<heading>
-		<h1><b><i>starmz123</i></b></h1>
+		<h1 class="name"><b><i>starmz123</i></b></h1>
 	</heading>
 
-	<aside><img src="https://edpolicy.stanford.edu/sites/default/files/Dr.%20Eve%20L%20Ewing%201%20by%20Daniel%20Barlow.jpg" alt="A photo of Eve Ewing" width="200px">
-	
-	<p><i>Is that me? No, gosh, I wish I were Eve Ewing.</i></p></aside>
+	<aside class="eve"><img src="https://edpolicy.stanford.edu/sites/default/files/Dr.%20Eve%20L%20Ewing%201%20by%20Daniel%20Barlow.jpg" alt="A photo of Eve Ewing" width="200px">
+
+		<p><i>Is that me? No, gosh, I wish I were Eve Ewing.</i></p>
+	</aside>
 
 	<main>
 		<section>
-			<h2>about me!</h2>
+			<h3>education.</h3>
+			<ol>
+				<li><b>kindergarten&#8212;high-school:</b> Hong Kong</li>
+				<li><b>high-school:</b> United Kingdom</li>
+				<li><b>university:</b> United States</li>
+			</ol>
+		</section>
 
-			<section>
-				<h3>education.</h3>
-				<ol>
-					<li>kindergarten&#8212;high-school: Hong Kong</li>
-					<li>high-school: United Kingdom</li>
-					<li>university: United States</li>
-				</ol>
-			</section>
+		<section>
+			<h3>skills.</h3>
+			<dl>
+				<dt><strong>writing</strong></dt>
+				<dd>creative writing, editorial, journalism, research, policy&#8212;you name it.</dd>
+			</dl>
 
-			<section>
-				<h3>skills.</h3>
-				<dl>
-					<dt><strong>writing</strong></dt>
-					<dd>creative writing, editorial, journalism, research, policy&#8212;you name it.</dd>
-				</dl>
+			<dl>
+				<dt><strong>graphic design</strong></dt>
+				<dd>no, i don't use <em>canva.</em></dd>
+			</dl>
 
-				<dl>
-					<dt><strong>graphic design</strong></dt>
-					<dd>no, i don't use <em>canva.</em></dd>
-				</dl>
+			<dl>
+				<dt><strong>html/css</strong></dt>
+				<dd>look, i'm learning!</dd>
+			</dl>
+		</section>
 
-				<dl>
-					<dt><strong>html/css</strong></dt>
-					<dd>look, i'm learning!</dd>
-				</dl>
-			</section>
+		<section>
+			<h3>interests.</h3>
+			<ul>
+				<li>police abolition</li>
+				<li>photography</li>
+				<li>fiction</li>
+				<li>sustainability</li>
+				<li>web design :)</li>
+			</ul>
+		</section>
 
-			<section>
-				<h3>interests.</h3>
-				<ul>
-					<li>police abolition</li>
-					<li>photography</li>
-					<li>fiction</li>
-					<li>sustainability</li>
-					<li>web design :)</li>
-				</ul>
-			</section>
+		<section>
+			<h3>favorite activities.</h3>
+			<ul>
+				<li>baking</li>
+				<li>gaming</li>
+				<li>hugging</li>
+			</ul>
+		</section>
 
-			<section>
-				<h3>favorite activities.</h3>
-				<ul>
-					<li>baking</li>
-					<li>gaming</li>
-					<li>hugging</li>
-				</ul>
-			</section>
-
-			<section>
-				<h3>social media.</h3>
-				<dl>
-					<dt><button><a href="http://reddit.com/u/starmz123" alt="/u/starmz123">reddit</a></button></dt>
-				</dl>
-			</section>
-
+		<section>
+			<h3>social media.</h3>
+			<dl>
+				<dt><button class="social-media"><a href="http://reddit.com/u/starmz123" alt="/u/starmz123">reddit</a></button></dt>
+			</dl>
 		</section>
 	</main>
 
-</body></html>
-
-<!-- Week 1 Homework:
-1. Set the title tag as your name
-2. Place your name in large, bold, italic text on the website
-3. Put your personal information in one section of the page (i.e. your school, skills, etc.)
-4. A list of your favorite activities
-5. Add a picture of a person you aspire to be like/look up to
-6. Provide a link to your social media
-7. Add anything else that you want. Make the website unique!!! -->
+</body>
+</html>
